--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-command = "yarn build"
+command = "npm run build"
 publish = "dist"            # Vite outputs to dist/
 
 [build.environment]
 NODE_VERSION = "22"
+NEXT_TELEMETRY_DISABLED = "1"
