--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
             "vite": "6.3.5"
       },
       "scripts": {
-            "dev": "vite",
-            "build": "node scripts/prebuild-crypto.js && vite build",
-            "start": "next start"
+            "dev": "next dev",
+            "build": "next build",
+            "start": "next start",
+            "lint": "next lint"
       }
 }
