Update build command to use Yarn and set Node.js version in Netlify configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-command = "npm run build"
+command = "yarn build"
 publish = "dist"            # Vite outputs to dist/
+
+[build.environment]
+NODE_VERSION = "22"    
