--- a/package.json
+++ b/package.json
@@ -48,15 +48,14 @@
             "tailwind-merge": "^3.3.1",
             "vaul": "^1.1.2"
       },
-      "devDependencies": {
-            "@types/node": "^20.10.0",
-            "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5"
-      },
-      "scripts": {
-            "dev": "next dev",
-            "build": "next build",
-            "start": "next start",
-            "lint": "next lint"
-      }
+    "devDependencies": {
+        "@types/node": "^20.10.0",
+        "@vitejs/plugin-react-swc": "^3.10.2",
+        "sharp": "^0.34.3",
+        "vite": "^6.3.5"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "node scripts/prebuild-crypto.js && vite build"
+    }
 }
